# tome

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: main.yml  tests.yml
example/: .tomeignore  read-from-root
example/dir_example/: an-ignored-script  bar
example/languages/: deno.ts  ruby
pkg/brew/: tome.rb
scripts/: goreleaser_hook.sh
src/: directory.rs  lib_tests.rs  script.rs
src/commands/: complete.rs  help.rs
