[package]
name = "tome"
version = "0.0.0-rc21"
authors = ["Yusuke Tsutsumi <yusuke@tsutsumi.io>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = { version = "1.4.0" }
gitignored = { version = "0.4.0" }

[dev-dependencies]
rstest = "0.12.0"
